--- a/templates/sections/home.html
+++ b/templates/sections/home.html
@@ -40,52 +40,52 @@
         <!-- Tech Stack Cards -->
         <div class="floating-cards">
           <div class="tech-card" data-tech="python" title="Python">
-            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/python/python-original.svg" alt="Python">
+            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/python/python-original.svg" alt="Python" loading="lazy" width="48" height="48">
           </div>
           <div class="tech-card" data-tech="django" title="Django">
-            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/django/django-plain.svg" alt="Django">
+            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/django/django-plain.svg" alt="Django" loading="lazy" width="48" height="48">
           </div>
           <div class="tech-card" data-tech="javascript" title="JavaScript">
-            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/javascript/javascript-original.svg" alt="JavaScript">
+            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/javascript/javascript-original.svg" alt="JavaScript" loading="lazy" width="48" height="48">
           </div>
           <div class="tech-card" data-tech="html5" title="HTML5">
-            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/html5/html5-original.svg" alt="HTML5">
+            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/html5/html5-original.svg" alt="HTML5" loading="lazy" width="48" height="48">
           </div>
           <div class="tech-card" data-tech="css3" title="CSS3">
-            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/css3/css3-original.svg" alt="CSS3">
+            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/css3/css3-original.svg" alt="CSS3" loading="lazy" width="48" height="48">
           </div>
           <div class="tech-card" data-tech="postgresql" title="PostgreSQL">
-            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/postgresql/postgresql-original.svg" alt="PostgreSQL">
+            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/postgresql/postgresql-original.svg" alt="PostgreSQL" loading="lazy" width="48" height="48">
           </div>
           <div class="tech-card" data-tech="mysql" title="MySQL">
-            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/mysql/mysql-original.svg" alt="MySQL">
+            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/mysql/mysql-original.svg" alt="MySQL" loading="lazy" width="48" height="48">
           </div>
           <div class="tech-card" data-tech="redis" title="Redis">
-            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/redis/redis-original.svg" alt="Redis">
+            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/redis/redis-original.svg" alt="Redis" loading="lazy" width="48" height="48">
           </div>
           <div class="tech-card" data-tech="celery" title="Celery">
-            <img src="https://docs.celeryq.dev/en/stable/_static/celery_512.png" alt="Celery">
+            <img src="https://docs.celeryq.dev/en/stable/_static/celery_512.png" alt="Celery" loading="lazy" width="48" height="48">
           </div>
           <div class="tech-card" data-tech="nginx" title="Nginx">
-            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/nginx/nginx-original.svg" alt="Nginx">
+            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/nginx/nginx-original.svg" alt="Nginx" loading="lazy" width="48" height="48">
           </div>
           <div class="tech-card" data-tech="apache" title="Apache">
-            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/apache/apache-original.svg" alt="Apache">
+            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/apache/apache-original.svg" alt="Apache" loading="lazy" width="48" height="48">
           </div>
           <div class="tech-card" data-tech="docker" title="Docker">
-            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/docker/docker-original.svg" alt="Docker">
+            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/docker/docker-original.svg" alt="Docker" loading="lazy" width="48" height="48">
           </div>
           <div class="tech-card" data-tech="linux" title="Linux">
-            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/linux/linux-original.svg" alt="Linux">
+            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/linux/linux-original.svg" alt="Linux" loading="lazy" width="48" height="48">
           </div>
           <div class="tech-card" data-tech="github" title="GitHub">
-            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/github/github-original.svg" alt="GitHub">
+            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/github/github-original.svg" alt="GitHub" loading="lazy" width="48" height="48">
           </div>
           <div class="tech-card" data-tech="pygame" title="Pygame">
-            <img src="https://www.pygame.org/docs/_static/pygame_logo.png" alt="Pygame">
+            <img src="https://www.pygame.org/docs/_static/pygame_logo.png" alt="Pygame" loading="lazy" width="48" height="48">
           </div>
           <div class="tech-card" data-tech="websocket" title="WebSocket">
-            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/socketio/socketio-original.svg" alt="WebSocket">
+            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/socketio/socketio-original.svg" alt="WebSocket" loading="lazy" width="48" height="48">
           </div>
         </div>
 
